# nanopb-exploration

./: .gitignore  CMakeLists.txt  bbuild.sh  readme.md
app/: CMakeLists.txt  main.c  protocol.pb.c  protocol.pb.h  protocol.proto  protocol_pb2.py  ring_buffer.h
docker/: builder.Dockerfile
exampleA/: CMakeLists.txt  main.c
exampleB/: main.c  protocol.pb.c  protocol.pb.h  protocol.proto
exampleC/: CMakeLists.txt  main.c  protocol.pb.h  protocol.proto
exampleD/: CMakeLists.txt  main.c  protocol.pb.h  protocol.proto
exampleE/: main.c  protocol.pb.c
exampleF/: CMakeLists.txt  main.c  protocol.options  protocol.pb.h
lib/: CMakeLists.txt  file_writer.c  file_writer.h
